{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 67,
  "lineage": "0980f5c0-90b3-faf2-9c32-659df83c9ccf",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:network-acl/acl-09d266c442b611a7a",
            "default_network_acl_id": "acl-09d266c442b611a7a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09d266c442b611a7a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "707508416284",
            "subnet_ids": [
              "subnet-02a4a0a3ad294ae09",
              "subnet-0628c1c48014ae6b9",
              "subnet-0768969bba7aa442b",
              "subnet-097130803ecdd0f9e",
              "subnet-0de049826ab6c7005",
              "subnet-0f4751186e9a49b1d"
            ],
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-default"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-default"
            },
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:route-table/rtb-0ded523a76f5b5cb1",
            "default_route_table_id": "rtb-0ded523a76f5b5cb1",
            "id": "rtb-0ded523a76f5b5cb1",
            "owner_id": "707508416284",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-default"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:security-group/sg-089cac0e157bf6893",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-089cac0e157bf6893",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "707508416284",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-default"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-default"
            },
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0628da9ba58325fbb",
            "domain": "vpc",
            "id": "eipalloc-0628da9ba58325fbb",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-68-228-70.us-west-2.compute.amazonaws.com",
            "public_ip": "54.68.228.70",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:internet-gateway/igw-0079eaf4b6f46635c",
            "id": "igw-0079eaf4b6f46635c",
            "owner_id": "707508416284",
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks"
            },
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0628da9ba58325fbb",
            "association_id": "eipassoc-087f245600367dd9f",
            "connectivity_type": "public",
            "id": "nat-03c944d4daddb2831",
            "network_interface_id": "eni-0c3b2a11b89089d30",
            "private_ip": "10.0.48.164",
            "public_ip": "54.68.228.70",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02a4a0a3ad294ae09",
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-us-west-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04938f8a0bd186b2c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03c944d4daddb2831",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04938f8a0bd186b2c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0079eaf4b6f46635c",
            "id": "r-rtb-013a222b8757045ac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013a222b8757045ac",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:route-table/rtb-04938f8a0bd186b2c",
            "id": "rtb-04938f8a0bd186b2c",
            "owner_id": "707508416284",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-private"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:route-table/rtb-013a222b8757045ac",
            "id": "rtb-013a222b8757045ac",
            "owner_id": "707508416284",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-public"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e32e901530b4bee",
            "route_table_id": "rtb-04938f8a0bd186b2c",
            "subnet_id": "subnet-0de049826ab6c7005"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a41316134f2d94a4",
            "route_table_id": "rtb-04938f8a0bd186b2c",
            "subnet_id": "subnet-0628c1c48014ae6b9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03af85b74f21a102a",
            "route_table_id": "rtb-04938f8a0bd186b2c",
            "subnet_id": "subnet-0f4751186e9a49b1d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0fabb5867df50e2",
            "route_table_id": "rtb-013a222b8757045ac",
            "subnet_id": "subnet-02a4a0a3ad294ae09"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a11d610fe1299904",
            "route_table_id": "rtb-013a222b8757045ac",
            "subnet_id": "subnet-0768969bba7aa442b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ec7a197bd6a0d8b",
            "route_table_id": "rtb-013a222b8757045ac",
            "subnet_id": "subnet-097130803ecdd0f9e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:subnet/subnet-0de049826ab6c7005",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de049826ab6c7005",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707508416284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-private-us-west-2a",
              "karpenter.sh/discovery": "cluster-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-private-us-west-2a",
              "karpenter.sh/discovery": "cluster-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:subnet/subnet-0628c1c48014ae6b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0628c1c48014ae6b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707508416284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-private-us-west-2b",
              "karpenter.sh/discovery": "cluster-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-private-us-west-2b",
              "karpenter.sh/discovery": "cluster-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:subnet/subnet-0f4751186e9a49b1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4751186e9a49b1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707508416284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-private-us-west-2c",
              "karpenter.sh/discovery": "cluster-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-private-us-west-2c",
              "karpenter.sh/discovery": "cluster-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:subnet/subnet-02a4a0a3ad294ae09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a4a0a3ad294ae09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707508416284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:subnet/subnet-0768969bba7aa442b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0768969bba7aa442b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707508416284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:subnet/subnet-097130803ecdd0f9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097130803ecdd0f9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707508416284",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-public-us-west-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks-public-us-west-2c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d502fb1cf3a0e484"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:707508416284:vpc/vpc-0d502fb1cf3a0e484",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d266c442b611a7a",
            "default_route_table_id": "rtb-0ded523a76f5b5cb1",
            "default_security_group_id": "sg-089cac0e157bf6893",
            "dhcp_options_id": "dopt-85654bfd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d502fb1cf3a0e484",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ded523a76f5b5cb1",
            "owner_id": "707508416284",
            "tags": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks"
            },
            "tags_all": {
              "Blueprint": "cluster-eks",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cluster-eks"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}